--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="brunch">
+    <h1>jcazorla website</h1>
     <a href="http://brunch.io"><img src="http://brunch.io/images/logo.png" alt="Brunch"></a>
     <p>Bon Appétit.</p>
   </div>
