Actualización contenido web

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -12,6 +12,6 @@
   <div class="brunch">
     <h1>jcazorla website</h1>
     <a href="http://brunch.io"><img src="http://brunch.io/images/logo.png" alt="Brunch"></a>
-    <p>Bon Appétit.</p>
+    <p>Escuela DevOps</p>
   </div>
 </body>
